--- a/AgendaContatos/app/src/main/res/layout/activity_main.xml
+++ b/AgendaContatos/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ListView
+        android:id="@+id/lista_contatos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
+    <Button
+        android:id="@+id/btn_novo_contato"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:textColor="@android:color/white"
+        android:textSize="32dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/botao_flutuante"
+        android:text="+"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        />
 </RelativeLayout>
